--- a/android/build.gradle
+++ b/android/build.gradle
@@ -56,6 +56,6 @@ dependencies {
         implementation "com.google.android.gms:play-services-iid:$iidVersion"
     }
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-    testImplementation "org.mockito:mockito-core:2.28.2"
+    testİmplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testİmplementation "org.mockito:mockito-core:2.28.2"
 }
